Blog section layout

--- a/public/partials/events.html
+++ b/public/partials/events.html
@@ -35,16 +35,6 @@
                     </p>
                 </div>
                 <div class="event-divider">
-                    <h6>January 23, 2014 (6—8PM)</h6>
-                    <h6>Santiago, Chile</h6>
-                    <h3><a href="https://www.facebook.com/events/448780538556922/">Small Talk—A Conversation Mixer</a></h3>
-                    <p>
-                        <a href="https://www.facebook.com/events/448780538556922/">
-                            <img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-prn1/t31.0-8/883866_10102777883775453_844019930_o.jpg" width="550px" style="padding-top:10px;">
-                        </a>
-                    </p>
-                </div>
-                <div class="event-divider">
                     <h6>January 27, 2014 (6—8PM)</h6>
                     <h6>San Francisco, CA</h6>
                     <h3>
@@ -55,8 +45,33 @@
                         <h7>It's no secret that being a female founder comes with a unique set of challenges. While fundraising can be difficult for all founders, recent studies show an alarmingly higher rate or fundraising success for male founders. Why is that? Is it a confidence issue? Is it unconscious bias telling investors that women are less capable leaders? Are women less likely to sell the hyper-growth storyline that investors crave? This event was organized by General Assembly and sponsored by FEW.</h7>
                     </p>
                 </div>
-                <div class="event-divider">                        <h6>December 6, 2013 (6—10pm)</h6>
-                        <h6>Santiago, Chile</h6>
+                <div class="event-divider">
+                    <h6>January 23, 2014 (6—8PM)</h6>
+                    <h6>Santiago, Chile</h6>
+                    <h3><a href="https://www.facebook.com/events/448780538556922/">Small Talk—A Conversation Mixer</a></h3>
+                    <p>
+                        <a href="https://www.facebook.com/events/448780538556922/">
+                            <img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-prn1/t31.0-8/883866_10102777883775453_844019930_o.jpg" width="550px" style="padding-top:10px;">
+                        </a>
+                    </p>
+                </div>
+                
+                <div class="event-divider">                        
+                    <h6>January 16, 2014 (7:30—10pm)</h6>
+                    <h6>Santiago, Chile</h6>
+                    <h3>
+                        <a href="http://ignitesantiago.tumblr.com/post/73300957671/more-additions-to-the-lineup-a-few-good-women">
+                        FEW Blog Reading at Ignite Santiago
+                        </a>
+                    </h3>
+                    <p>
+                        <h7>Danielle Carruthers and Sarah Hebert, Principals at FEW, share excerpts from their writings at <a href="http://ignitesantiago.tumblr.com/">Ignite Santiago</a>. Read the full version of Danielle’s piece, <a href="https://medium.com/female-entrepreneurs-of-the-world/ee1dbe98910f">"Building The Mindset For Startup Success"</a> and Sarah’s piece, <a href="https://medium.com/female-entrepreneurs-of-the-world/23fbf2cfda62">"The Problem With Magical Thinking"</a>.
+                        </h7>
+                    </p>
+                </div>
+                <div class="event-divider">                        
+                    <h6>December 6, 2013 (6—10pm)</h6>
+                    <h6>Santiago, Chile</h6>
                     <h3><a href="https://medium.com/p/3e18e0261fdc">TEDxSantiagoWomen</a></h3>
                     <p>
                         <a href="http://tedxsantiago.com/women.html">
