--- a/public/partials/principals.html
+++ b/public/partials/principals.html
@@ -5,29 +5,187 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <p><a href="http://www.linkedin.com/in/andreabouch">Andrea Bouch, US</a></p>
-                <p><a href="http://cl.linkedin.com/in/komaldadlani">Komal Dadlani, Chile</a></p>
-                <p><a href="http://www.linkedin.com/in/allisoncarmen">Allison Carmen, US</a></p>
-                <p><a href="http://ca.linkedin.com/pub/danielle-carruthers/1b/264/845">Danielle Carruthers, Canada</a></p>
-                <p><a href="http://ca.linkedin.com/pub/sarah-h%C3%A9bert/55/868/338">Sarah Hebert, Guatemala</a></p>
-                <p><a href="http://www.linkedin.com/in/leejen">Jen Lee, US</a></p>
-                <p><a href="http://ve.linkedin.com/pub/lissette-rojas/0/825/536">Lissette Rojas, Venezuela</a></p>
-                <p><a href="http://www.linkedin.com/pub/aparna-sud/5a/962/875">Aparna Sud, US</a></p>
-                <p><a href="http://cl.linkedin.com/pub/andre%C3%ADna-zulueta/32/622/140/en">Andreina Zulueta, Venezuela</a></p>
-                
-                <h5>Interested in becoming a Principal of FEW?</h5>
-                <p>(dropdown)</p>
+                <div class="media principal-container">
+                    <a class="pull-left" href="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/7/005/009/269/3a3e101.jpg">
+                        <img class="media-object" 
+                            src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/7/005/009/269/3a3e101.jpg" 
+                            style="width: 70px; height: 70px;">
+                    </a>
+                    <div class="media-body">
+                        <p class="media-heading principal-name">
+                            <a href="http://www.linkedin.com/in/andreabouch">Andrea Bouch</a>
+                        </p>
+                        <p class="principal-city">San Francisco, CA, US
+                        </p>
+                     </div>
+                </div>
+            </div>            
+        </div> 
+        
+        <div class="row">
+            <div class="col-md-12">
+                <div class="media principal-container">
+                    <a class="pull-left" href="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/2/000/24f/0e0/2720973.jpg">
+                        <img class="media-object" 
+                            src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/2/000/24f/0e0/2720973.jpg" 
+                            style="width: 70px; height: 70px;">
+                    </a>
+                    <div class="media-body">
+                        <p class="media-heading principal-name">
+                            <a href="http://www.linkedin.com/in/allisoncarmen">Allison Carmen</a>
+                        </p>
+                        <p class="principal-city">St. Louis, Missouri, US
+                        </p>
+                     </div>
+                </div>
+            </div>            
+        </div>    
+        
+        <div class="row">
+            <div class="col-md-12">
+                <div class="media principal-container">
+                    <a class="pull-left" href="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/2/005/039/308/0a83010.jpg">
+                        <img class="media-object" 
+                            src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/2/005/039/308/0a83010.jpg" 
+                            style="width: 70px; height: 70px;">
+                    </a>
+                    <div class="media-body">
+                        <p class="media-heading principal-name">
+                            <a href="http://ca.linkedin.com/pub/danielle-carruthers/1b/264/845">Danielle Carruthers</a>
+                        </p>
+                        <p class="principal-city">Calgary, Canada
+                        </p>
+                     </div>
+                </div>
+            </div>            
+        </div>
 
-                <p>Becoming a principal is a commitment to FEW’s mission (link), and a larger opportunity to bring people together from all walks of life to discuss issues surrounding gender equality and entrepreneurship. We ask, on a yearly basis, that principals organize one event, contribute an original thought piece to our blog, and share relevant news and updates with the world through your own social networks.</p>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="media principal-container">
+                    <a class="pull-left" href="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/2/000/1a9/215/32d034e.jpg">
+                        <img class="media-object" 
+                            src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/2/000/1a9/215/32d034e.jpg" 
+                            style="width: 70px; height: 70px;">
+                    </a>
+                    <div class="media-body">
+                        <p class="media-heading principal-name">
+                            <a href="http://cl.linkedin.com/in/komaldadlani">Komal Dadlani</a>
+                        </p>
+                        <p class="principal-city">Santiago, Chile
+                        </p>
+                     </div>
+                </div>
+            </div>            
+        </div>
+        
+        <div class="row">
+            <div class="col-md-6">
+                <div class="media principal-container">
+                    <a class="pull-left" href="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/7/005/01e/193/395afa1.jpg">
+                        <img class="media-object" 
+                            src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/7/005/01e/193/395afa1.jpg" 
+                            style="width: 70px; height: 70px;">
+                    </a>
+                    <div class="media-body">
+                        <p class="media-heading principal-name">
+                            <a href="http://ca.linkedin.com/pub/sarah-h%C3%A9bert/55/868/338">Sarah Hébert</a>
+                        </p>
+                        <p class="principal-city">Guatemala
+                        </p>
+                     </div>
+                </div>
+            </div>            
+        
+            <div class="col-md-6">
+                <div class="media principal-container">
+                    <a class="pull-left" href="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/8/005/039/349/140ed97.jpg">
+                        <img class="media-object" 
+                            src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/8/005/039/349/140ed97.jpg" 
+                            style="width: 70px; height: 70px;">
+                    </a>
+                    <div class="media-body">
+                        <p class="media-heading principal-name">
+                            <a href="http://www.linkedin.com/in/leejen">Jen Lee (Founder)</a>
+                        </p>
+                        <p class="principal-city">San Francisco, CA, US
+                        </p>
+                     </div>
+                </div>
+            </div>            
+        </div>
+        
+            <div class="col-md-6">
+                <div class="media principal-container">
+                    <a class="pull-left" href="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/1/000/067/331/205e774.jpg">
+                        <img class="media-object" 
+                            src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/1/000/067/331/205e774.jpg" 
+                            style="width: 70px; height: 70px;">
+                    </a>
+                    <div class="media-body">
+                        <p class="media-heading principal-name">
+                            <a href="http://ve.linkedin.com/pub/lissette-rojas/0/825/536">Lissette Rojas</a>
+                        </p>
+                        <p class="principal-city">Venezuela
+                        </p>
+                     </div>
+                </div>
+            </div>            
 
-                <h3>Core Responsibilities:</h3>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="media principal-container">
+                    <a class="pull-left" href="http://m.c.lnkd.licdn.com/media/p/7/000/1ba/148/265c2bc.jpg">
+                        <img class="media-object" 
+                            src="http://m.c.lnkd.licdn.com/media/p/7/000/1ba/148/265c2bc.jpg" 
+                            style="width: 70px; height: 70px;">
+                    </a>
+                    <div class="media-body">
+                        <p class="media-heading principal-name">
+                            <a href="http://www.linkedin.com/pub/aparna-sud/5a/962/875">Aparna Sud</a>
+                        </p>
+                        <p class="principal-city">Boston, MA, US
+                        </p>
+                     </div>
+                </div>
+            </div>            
+        </div>
 
-                <p>Organize one event in your local area that aligns with FEW's mission of advancing women in entrepreneurship and promoting gender equality. This event could be an intimate Q&A, social mixer, conference or gathering of any size, so long as it promotes the organization's overarching goals. Principals are expected to communicate event plans via email to other Principals in advance to receive feedback and advice. We're all in this together and our supportive community is there to guide you in such endeavors.</p>
-                <p>Submit an original thought piece for our blog, while encouraging others to contribute to our written collection of articles. We seek both men and women writers.</p>
-                <p>Promote FEW activities by sharing events, articles, resources through personal networks and inviting others to follow our social media channels.</p>
-                <p>Stay connected with fellow FEW Principals by contributing new ideas, and offering feedback and advice.</p> 
+        <div class="row">
+            <div class="col-md-12">
+                <div class="media principal-container">
+                    <a class="pull-left" href="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/7/000/1e0/214/0255548.jpg">
+                        <img class="media-object" 
+                            src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/7/000/1e0/214/0255548.jpg" 
+                            style="width: 70px; height: 70px;">
+                    </a>
+                    <div class="media-body">
+                        <p class="media-heading principal-name">
+                            <a href="http://cl.linkedin.com/pub/andre%C3%ADna-zulueta/32/622/140/en">Andreina Zulueta</a>
+                        </p>
+                        <p class="principal-city">Santiago, Chile
+                        </p>
+                     </div>
+                </div>
+            </div>            
+        </div>
 
-                <p>If you’re interested in becoming a principal for F-E-W, please contact us at holafew@gmail.com. We look forward to hearing from you!</p>
+        <div class="row">
+            <div class="col-md-12">            
+                <h5><a ng-click="showDescription=!showDescription">Interested in becoming a Principal of FEW?</a></h5>
+                <div class="animate-show"
+                    ng-show="showDescription">
+                    <p>Becoming a principal is a commitment to FEW’s mission (link), and a larger opportunity to bring people together from all walks of life to discuss issues surrounding gender equality and entrepreneurship. We ask, on a yearly basis, that principals organize one event, contribute an original thought piece to our blog, and share relevant news and updates with the world through your own social networks.</p>
+
+                    <h3>Core Responsibilities:</h3>
+
+                    <p>Organize one event in your local area that aligns with FEW's mission of advancing women in entrepreneurship and promoting gender equality. This event could be an intimate Q&#38;A, social mixer, conference or gathering of any size, so long as it promotes the organization's overarching goals. Principals are expected to communicate event plans via email to other Principals in advance to receive feedback and advice. We're all in this together and our supportive community is there to guide you in such endeavors.</p>
+                    <p>Submit an original thought piece for our blog, while encouraging others to contribute to our written collection of articles. We seek both men and women writers.</p>
+                    <p>Promote FEW activities by sharing events, articles, resources through personal networks and inviting others to follow our social media channels.</p>
+                    <p>Stay connected with fellow FEW Principals by contributing new ideas, and offering feedback and advice.</p> 
+
+                    <p>If you’re interested in becoming a principal for F-E-W, please contact us at holafew@gmail.com. We look forward to hearing from you!</p>
+                </div>
             </div>
         </div>
         <div class="row">
