--- a/public/partials/blog.html
+++ b/public/partials/blog.html
@@ -1,12 +1,75 @@
-<div class="col-md-4 col-md-offset-4 top-spacer">
+<div class="col-md-8 col-md-offset-2 top-spacer">
     <h2>Blog</h2>
-        <div class="col-md-12">
+        <div class="col-md-6 col-md-offset-3">            
             <div class="subhead-line center-block"></div>
         </div>
         <div class="row">
             <div class="col-md-12 section-intro">
             </div>
         </div>
+               
+               <div class="row blog-thumbnail-row">
+                   
+                   <div class="col-md-4 blog-thumbnail">
+                       <div class="blog-thumbnail-inner">
+                           <div class="background-overlay"></div>
+                           <div class="text-overlay">
+                               <div class="text-overlay-inner">
+                                    <p class="quote">I stared at those 4 words and realized that I could not stand before a room of people and brag for 3 minutes. And it was a horrible and humbling realization.
+                                    </p>
+                                    <p class="continue-text">Continue reading &rarr;</p>
+                                </div>
+                           </div>
+                           <div class="caption-overlay">
+                                <div class="caption-title">
+                                    Brag Pitch III: Oh Sh*t, This Was a Terrible Idea
+                                </div>
+                                <div class="author">
+                                    Andrea Bouch
+                                </div>
+                                <div class="author">
+                                    Co-founder, The IQ Collective
+                                </div>
+                           </div>                           
+                           <a href="https://medium.com/female-entrepreneurs-of-the-world/2c57c4d8eb18">
+                                <img src="https://d262ilb51hltx0.cloudfront.net/fit/t/1800/1440/gradv/29/81/55/1*wMPvBKjXhH95O63yDX3S2Q.jpeg" 
+                                    class="thumbnail img-responsive">
+                            </a>
+                        </div>    
+                    </div>
+                    
+                    <div class="col-md-4 blog-thumbnail">
+                        <div class="blog-thumbnail-inner">
+                            <div class="background-overlay"></div>
+                            <div class="text-overlay">
+                                <div class="text-overlay-inner">
+                                     <p class="quote">Brag pitching is an amazing way to push beyond your comfort zone, get to know people, and improve on key skills like public speaking.
+                                     </p>
+                                     <p class="continue-text">Continue reading &rarr;</p>
+                                 </div>
+                            </div>
+                            <div class="caption-overlay">
+                                 <div class="caption-title">
+                                     Brag Pitch II: Brag Pitching Rules Of Engagement
+                                 </div>
+                                 <div class="author">
+                                     Andrea Bouch
+                                 </div>
+                                 <div class="author">
+                                     Co-founder, The IQ Collective
+                                 </div>
+                            </div>                           
+                            <a href="https://medium.com/female-entrepreneurs-of-the-world/f09f80a8cdf1">
+                                 <img src="https://d262ilb51hltx0.cloudfront.net/fit/t/1800/1440/gradv/29/81/55/1*GC11qBUA7h2iEMZdZCwl0w.jpeg" 
+                                     class="thumbnail img-responsive">
+                             </a>
+                         </div>    
+                     </div>
+                
+                 </div>
+                 
+
+
         <div class="row">
             <div class="col-md-12 view-bottom-spacer">        
             </div>
