--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -374,6 +374,12 @@ a .nav-links {
     font-size: 15px !important;
 }
 
+.joined-timestamp {
+    float: right;
+    font-size: 11px;
+    color: lightgray;
+}
+
 /* Info pop-up styling end */
 
 /* Events start */
@@ -443,3 +449,239 @@ input.checkbox-input {
 }
 
 /* Participate end */
+
+/* Statistics start */
+.animate-show {
+top: 0;
+position: absolute;
+
+  opacity:1;
+  -webkit-transition:all linear 1s;
+  transition:all linear 1s;
+}
+ 
+.animate-show.ng-hide-add,
+.animate-show.ng-hide-remove {
+  display:block!important;
+}
+ 
+.animate-show.ng-hide-add.ng-hide-add-active,
+.animate-show.ng-hide-remove.ng-hide-remove-active {
+  -webkit-transition:all linear 1s;
+  transition:all linear 1s;
+}
+ 
+.animate-show.ng-hide {
+  opacity:0;
+  position:-100%;
+}
+
+
+.accordion-body {
+  max-height: 100%;
+  height:100%;
+  -webkit-transition: 3s linear all;
+  transition: 3s linear all;
+}
+.accordion-body.ng-hide-add,
+.accordion-body.ng-hide-remove {
+  display: block !important;
+  max-height: 0px;
+}
+
+.accordion-body.ng-hide-remove.ng-hide-remove-active {
+  max-height: 100%;
+}
+.accordion-body.ng-hide-add{
+  max-height: 100%;
+}
+.accordion-body.ng-hide-add.ng-hide-add-active {
+  max-height: 0;
+}
+
+.container {
+    position: relative;
+}
+.item {
+    margin-top: 5px;
+    padding: 15px;
+    background-color: #34ac54;
+    border: 1px solid black;
+    position: relative;
+}
+
+@-webkit-keyframes slide_down {
+  0% {
+    margin-top: -68px;
+    opacity: 0;
+    z-index: -100;
+  }
+
+  99% {
+    z-index: -100;
+  }
+
+  100% {
+      margin-top:5px;
+    opacity: 1;
+    z-index: 0;
+  }
+}
+
+.animation-slide-down.ng-enter {
+  -webkit-animation: slide_down 1s ease-in;
+  -moz-animation: slide_down 1s ease-in;
+  -ms-animation: slide_down 1s ease-in;
+  -o-animation: slide_down 1s ease-in;
+  animation: slide_down 1s ease-in;
+}
+
+/* Statistics end */
+
+/* Principals start */
+
+.principal-container {
+    padding-bottom: 30px;
+}
+
+.principal-name {
+    font-weight: 700 !important;
+    font-size: 20px !important;
+    letter-spacing: 1px !important;
+    margin-top: 4px;
+    margin-bottom: -4px;
+    margin-left: 10px;
+}
+
+.principal-city {
+    font-weight: 400;
+    font-size: 14px;
+    letter-spacing: 1px;
+    margin-left: 10px;
+}
+
+/* Principals end */
+
+/* Blog start */
+
+.blog-thumbnail {
+    position: relative;
+}
+
+.blog-thumbnail a img {
+    border: none !important;
+    padding: 0 !important;
+    border-radius: 0px !important;
+}
+
+.blog-thumbnail-row {
+    margin-bottom: 20px;
+}
+
+.blog-thumbnail-inner {
+    max-width: 95%;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.blog-thumbnail-inner:hover .background-overlay {
+    opacity:0.7;
+}
+
+.blog-thumbnail-inner:hover .text-overlay {
+    opacity:1;
+    transition-delay: 0.2s; 
+}
+
+.background-overlay,
+.text-overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0;
+    -webkit-transition: opacity 0.3s ease-in-out;
+    -moz-transition: opacity 0.3s ease-in-out;
+    -o-transition: opacity 0.3s ease-in-out;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.text-overlay {
+    transition-delay: 0s; 
+}
+
+.background-overlay {
+    background-color: #6600FF;    
+}
+
+.text-overlay p.quote {
+    color: white !important;
+    letter-spacing: 1px;
+    font-style: italic;
+    font-weight: 300;
+    line-height: 19px;
+    font-size: 13px;
+}
+
+.text-overlay {
+    padding: 40px;
+}
+
+.caption-overlay {
+    position: absolute;
+    bottom: 0;
+    opacity: 1;
+    padding: 0 35px 18px 18px;
+    -webkit-transition: opacity 0.4s ease-in-out;
+    -moz-transition: opacity 0.4s ease-in-out;
+    -o-transition: opacity 0.4s ease-in-out;
+    transition: opacity 0.4s ease-in-out;
+    transition-delay: 0.2s; 
+}
+
+div.caption-title {
+    font-weight: 500;
+    width: 100%;
+    letter-spacing: 1px;
+    font-size: 16px;
+    color: white;
+    line-height: 23px;
+    margin-bottom: 5px;
+}
+
+div.author,
+div.author a {
+    font-weight: 300;
+    width: 100%;
+    letter-spacing: 2px;
+    font-size: 11px;
+    color: white;
+    line-height: 17px;
+    font-style: italic;
+}
+
+.blog-thumbnail-inner:hover .caption-overlay {
+    opacity:0;
+    transition-delay: 0s; 
+}
+
+p.continue-text {
+    font-weight: 400;
+    font-size: 12px;
+    letter-spacing: 1px;    
+    color: white;
+}
+
+/* Blog end */
+
+
+
+
+
+
+
+
+
+
